# ChangeLog for sys-apps/util-linux
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/util-linux/ChangeLog,v 1.71 2004/03/01 19:59:51 aliz Exp $

  27 Feb 2004; Seemant Kulleen <seemant@gentoo.org>
  util-linux-2.11z-r8.ebuild:
  move the filter-flags statement into src_compile

  22 Feb 2004; Daniel Ahlberg <aliz@gentoo.org> util-linux-2.12-r5.ebuild:
  Add installation of rdev on amd64. Closing #35902.

*util-linux-2.12-r5 (17 Feb 2004)

  17 Feb 2004; Luca Barbato <lu_zero@gentoo.org> util-linux-2.12-r5.ebuild,
  files/util-linux-2.12-gcloop.patch:
  Added support for gcloop in losetup

  09 Feb 2004; <gustavoz@gentoo.org> util-linux-2.12-r4.ebuild:
  stable on hppa and sparc

  06 Feb 2004; Martin Schlemmer <azarah@gentoo.org> util-linux-2.12-r4.ebuild:
  Bump to stable for x86.

  03 Feb 2004; Bartosch Pixa <darkspecter@gentoo.org>
  util-linux-2.12-r3.ebuild:
  set ppc in keywords

*util-linux-2.12-r4 (30 Dec 2003)

  30 Dec 2003; Martin Schlemmer <azarah@gentoo.org> util-linux-2.12-r4.ebuild,
  files/util-linux-2.12-fat-LABEL-support.patch:
  Add support to read fat/fat32 labels, bug #36722.

  11 Dec 2003; Mike Frysinger <vapier@gentoo.org> util-linux-2.12-r3.ebuild :
  Add patch to compile against 2.6.x headers #31286.

*util-linux-2.11z-r9 (06 Dec 2003)
*util-linux-2.11z-r8 (08 Dec 2003)
*util-linux-2.12-r2 (08 Dec 2003)
*util-linux-2.12-r3 (08 Dec 2003)

  06 Dec 2003; Seemant Kulleen <seemant@gentoo.org>
  util-linux-2.11z-r6.ebuild, util-linux-2.11z-r7.ebuild,
  util-linux-2.11z-r8.ebuild, util-linux-2.11z-r9.ebuild,
  util-linux-2.12-r1.ebuild, util-linux-2.12-r2.ebuild,
  util-linux-2.12-r3.ebuild, util-linux-2.12.ebuild,
  files/util-linux-no-kill.patch:
  /bin/kill used to be part of this package. procps will now be the only one
  providing that

*util-linux-2.12-r1 (02 Dec 2003)
