@@ -1,28 +1,28 @@
-MD5 c3ccd0da7f432a2a33f52c0685909847 util-linux-2.12-r3.ebuild 3741
-MD5 2f02780f8a8296278aed7c8a1d2097a1 util-linux-2.12-r5.ebuild 4001
-MD5 6191d64f4084a732f36b174edf10073a util-linux-2.11z-r9.ebuild 3410
-MD5 3f7236955557dab55a94580cbecd6b29 util-linux-2.12-r2.ebuild 3301
-MD5 2407419c432051c10ba774e32033abeb util-linux-2.12-r4.ebuild 3843
-MD5 87a7eefb2df3b1f7d0ecef6032075481 util-linux-2.11z-r8.ebuild 3220
-MD5 bbe911e17faa11676bf855e3355ceb25 ChangeLog 11668
+MD5 b5e0863ae7d4df6a1d14ffc5f2c53779 ChangeLog 11770
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
-MD5 0be8df03dae23c81a0e929e58a4114e0 files/util-linux-2.11z-01-nfsv4.dif 13442
-MD5 18371db840b08f5782e3f8f96c4efe8d files/util-linux-2.11z-pic.patch 3056
-MD5 4460875a6ebcf24a7ca5b41ed12f9fe5 files/util-linux-2.12-gcloop.patch 3806
-MD5 7ce604460c5607e6eb5d894b6c8b2064 files/util-linux-2.12-fat-LABEL-support.patch 11583
-MD5 8d4f1146f0699deb1e6872e1c81293e3 files/util-linux-2.12-selinux.diff.bz2 2558
-MD5 d927611f34139a40f1fc9f4162c61f8a files/util-linux-2.12-kernel-2.6.patch 2964
-MD5 0f2f1ddaeaf52622fa80f4f08bb25a6b files/util-linux-2.11z-01-nfsv4-crypt.dif 13460
+MD5 87a7eefb2df3b1f7d0ecef6032075481 util-linux-2.11z-r8.ebuild 3220
+MD5 0df1aa245c71eff3ad6d43f23edefead util-linux-2.11z-r9.ebuild 3407
+MD5 de050928c239746833d9c5fa6f85c3d5 util-linux-2.12-r2.ebuild 3298
+MD5 c3ccd0da7f432a2a33f52c0685909847 util-linux-2.12-r3.ebuild 3741
+MD5 e0151d738a98b21f60f1c3c89bbb4ecb util-linux-2.12-r4.ebuild 3844
+MD5 2f02780f8a8296278aed7c8a1d2097a1 util-linux-2.12-r5.ebuild 4001
 MD5 02afa4d774f45ab0b9ef42ecc1748005 files/digest-util-linux-2.11z-r8 153
 MD5 02afa4d774f45ab0b9ef42ecc1748005 files/digest-util-linux-2.11z-r9 153
-MD5 6dc0134d8d5f325a86257698d2184718 files/util-linux-2.11z-mips-fdisk-fix.patch 1698
-MD5 65f42fbf981464410f7d5d84a429e920 files/util-linux-no-kill.patch 642
-MD5 11fdaf3d68904b318fbffd7243e719b7 files/util-linux-2.12-amd64_rdev_installation.patch 737
-MD5 6aa1c240dd789327ea92e36309052950 files/no-symlink-resolve.patch 316
-MD5 7d35ae646b52391076f7a329af8265bc files/util-linux-2.11z-agetty-domainname-option.patch 1810
 MD5 830453d37b748b7e2ec454603e33b920 files/digest-util-linux-2.12-r2 151
 MD5 5a1bf3d383850b6c8ca05cc4fe76c813 files/digest-util-linux-2.12-r3 154
 MD5 5a1bf3d383850b6c8ca05cc4fe76c813 files/digest-util-linux-2.12-r4 154
-MD5 5a1bf3d383850b6c8ca05cc4fe76c813 files/digest-util-linux-2.12-r5 154
-MD5 90b5a47385e394b9112357282c35eb4a files/util-linux-2.11z-script.patch 1580
+MD5 6aa1c240dd789327ea92e36309052950 files/no-symlink-resolve.patch 316
+MD5 0f2f1ddaeaf52622fa80f4f08bb25a6b files/util-linux-2.11z-01-nfsv4-crypt.dif 13460
+MD5 0be8df03dae23c81a0e929e58a4114e0 files/util-linux-2.11z-01-nfsv4.dif 13442
+MD5 7d35ae646b52391076f7a329af8265bc files/util-linux-2.11z-agetty-domainname-option.patch 1810
+MD5 6dc0134d8d5f325a86257698d2184718 files/util-linux-2.11z-mips-fdisk-fix.patch 1698
 MD5 e3697bc8fd6a344e8cba1c7d32e34790 files/util-linux-2.11z-parallel-make.patch 369
+MD5 18371db840b08f5782e3f8f96c4efe8d files/util-linux-2.11z-pic.patch 3056
+MD5 90b5a47385e394b9112357282c35eb4a files/util-linux-2.11z-script.patch 1580
+MD5 7ce604460c5607e6eb5d894b6c8b2064 files/util-linux-2.12-fat-LABEL-support.patch 11583
+MD5 d927611f34139a40f1fc9f4162c61f8a files/util-linux-2.12-kernel-2.6.patch 2964
+MD5 8d4f1146f0699deb1e6872e1c81293e3 files/util-linux-2.12-selinux.diff.bz2 2558
+MD5 65f42fbf981464410f7d5d84a429e920 files/util-linux-no-kill.patch 642
+MD5 5a1bf3d383850b6c8ca05cc4fe76c813 files/digest-util-linux-2.12-r5 154
+MD5 11fdaf3d68904b318fbffd7243e719b7 files/util-linux-2.12-amd64_rdev_installation.patch 737
+MD5 4460875a6ebcf24a7ca5b41ed12f9fe5 files/util-linux-2.12-gcloop.patch 3806
