@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/util-linux/Attic/util-linux-2.12-r2.ebuild,v 1.2 2004/02/23 00:53:40 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/util-linux/Attic/util-linux-2.12-r2.ebuild,v 1.3 2004/03/07 09:21:48 kumba Exp $
 
 IUSE="crypt nls static pam selinux"
 
