@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/util-linux/Attic/util-linux-2.12-r4.ebuild,v 1.5 2004/03/02 16:42:59 iggy Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/util-linux/Attic/util-linux-2.12-r4.ebuild,v 1.6 2004/03/07 09:21:48 kumba Exp $
 
 IUSE="crypt nls static pam selinux"
 
@@ -24,7 +24,7 @@ SRC_URI="mirror://kernel/linux/utils/${PN}/${P}.tar.gz
 	crypt? ( mirror://gentoo/${CRYPT_PATCH_P}.patch.bz2 )"
 HOMEPAGE="http://www.kernel.org/pub/linux/utils/util-linux/"
 
-KEYWORDS="x86 ~amd64 ~ppc sparc ~alpha ~mips hppa ~ia64 ~ppc64 s390"
+KEYWORDS="x86 ~amd64 ~ppc sparc ~alpha mips hppa ~ia64 ~ppc64 s390"
 SLOT="0"
 LICENSE="GPL-2"
 
